--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-a{
-    text-decoration: none;
-}
+/*****************FORMULAIRE CONNEXION INSCRIPTION*****************/
 body{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     display: flex;
@@ -8,7 +6,12 @@ body{
     align-items: center;
     background-color: #f5f5f5;
 }
-form{
+
+a{
+    text-decoration: none;
+}
+
+.authentification{
     min-width: 50rem;
     margin-top: 20px;
     background-color: #fff;
@@ -16,15 +19,15 @@ form{
     border-radius: 10px;
     min-width: 300px;
 }
-form h2{
+.authentification h2{
     color: RGB(0 178 255);
     text-align: center;
 }
-form .input{
+.authentification .input{
     display: flex;
     flex-direction: column;
 }
-form .input input[type='text'], input[type='mail'], input[type='password']{
+.authentification .input input[type='text'], input[type='mail'], input[type='password']{
     padding: 15px;
     border-radius: 5px;
     border: none;
@@ -32,19 +35,18 @@ form .input input[type='text'], input[type='mail'], input[type='password']{
     margin-bottom: 15px;
     outline: none;
 }
-form label{
+.authentification label{
     padding-bottom: 5px;
 }
 
-form p.annone{
+.authentification p.annone{
     font-size: 14px;
     padding-top: 20px;
-    
 }
-form p.annonce a{
+.authentification p.annonce a{
     color: #878787;
 }
-form input[type='submit']{
+.authentification input[type='submit']{
     padding: 15px 25px;
     border: none;
     border-radius: 5px;
@@ -52,11 +54,207 @@ form input[type='submit']{
     background-color: RGB(0 178 255);
     outline: none;
     cursor: pointer;
-   text-align: center;
+    text-align: center;
 }
-.chat-global, .talk-left p{
-    color: blue;
+/*****************FORMULAIRE CONNEXION INSCRIPTION*****************/
+
+::before, ::after{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-.chat-global, .talk-right p{
-    color: red;
+
+.chat-global{
+    width: 600px;
+    height: 700px;
+    margin: 0 auto;
+    border-radius: 25px;
+    box-shadow: 0 30px 70px 0px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    position: relative;
+    top: 50px;
 }
+.nav-top{
+    position: absolute;
+    background: #fff;
+    top: 0;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(51,51,51,0.2);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    align-items: center;
+}
+
+/******************ajouter par moi***********************/
+
+.talk .user a {
+    margin-left: 5px;
+   text-align: none;
+}
+.nav-top img{
+    border-radius: 50%;
+}
+.location {
+    width: 100px;
+    display: flex;
+    align-items: center;
+}
+.location img{
+    width: 30px;
+    margin-left: 5px;
+    border-radius: 50%;
+}
+.location p{
+    font-size: 20px;
+    margin-left: 5px;
+}
+
+.utilisateur{
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    /*justify-content: space-between;*/
+}
+.utilisateur p{
+    margin-left: 5px;
+}
+
+.utilisateur p:nth-child(1){
+    font-size: 20px;
+}
+
+.utilisateur p:nth-child(2){
+    font-size: 14px;
+    opacity: 0.8;
+}
+.logos-call {
+    width: 100px;
+    display: flex;
+}
+.logos-call,  .deconnexion{
+    margin-right: 7rem;
+    margin-top: 1rem;
+    width: 30px;
+
+}
+
+/*********** conversation *************/
+
+.conversation {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    overflow-y: scroll;
+    background: #0000;
+}
+
+.talk {
+    margin: 20px 0;
+    color: #f1f1f1;
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    width: 50%;
+}
+
+.talk img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-bottom: auto;
+}
+
+.talk p {
+    padding: 15px;
+    line-height: 25px;
+    border-radius: 20px;
+}
+
+.right {
+    margin-left: auto;
+}
+
+.right p {
+    margin-left: 10px;
+    background: #0078ff;
+}
+
+.left p {
+    margin-right: 20px;
+    background: rgba(216, 216, 216, 216);
+    color: #000;
+}
+
+/******FORM******/
+.chat-form {
+    width: 100%;
+    height: 90px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background: #f1f1f1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-input-stuffs{
+    background: #fff;
+    display: flex;
+    width: 90%;
+    height: 60px;
+    border-radius: 9999px;
+}
+
+.group-inp{
+    width: 90%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.group-inp img{
+    width: 30px;
+}
+.group-inp textarea{
+    resize: none;
+    outline: none;
+    border: none;
+    padding-left: 10px;
+    font-size: 16px;
+    width: 100%;
+    height: 40px;
+    padding-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.submit-msg-btn{
+    background: #fff;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    width: 70px;
+    border: none;
+    display: flex;
+    padding-right: 5px;
+    justify-content: center;
+    align-items: center;
+
+}
+.files-logo-const{
+
+}
+
+
+.img {
+   border-radius: 50%; 
+   width: 30px;
+}
+
